--- a/src/profi/templates/scripts/listener-nc.yaml
+++ b/src/profi/templates/scripts/listener-nc.yaml
@@ -1,9 +1,9 @@
+---
 metadata:
-  filename: listener-nc.yaml
-  tags:
-  - shell
-  created: '2025-03-29'
-  author: Unknown
-content: 'nc -lvnp {{ shell_port }}
+  filename: "listener-nc.yaml"
+  tags: ["shell"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  nc -lvnp {{ shell_port }}
