--- a/src/profi/templates/scripts/wsdl-to-note-md.yaml
+++ b/src/profi/templates/scripts/wsdl-to-note-md.yaml
@@ -1,9 +1,9 @@
+---
 metadata:
-  filename: wsdl-to-note-md.yaml
-  tags:
-  - utils
-  created: '2025-03-29'
-  author: Unknown
-content: 'python {{ templates_dir }}/helper_scripts/wsdlEndpointsToNote.py
+  filename: "wsdl-to-note-md.yaml"
+  tags: ["utils"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  python {{ templates_dir }}/helper_scripts/wsdlEndpointsToNote.py
