--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,7 +14,22 @@ jobs:
   pytest:
     name: Pytest
     uses: ./.github/workflows/_pytest.yml
+    needs: lint
 
   install:
     name: Install
     uses: ./.github/workflows/_install.yml
+    needs: pytest
+
+  status-check:
+    name: Status Check
+    runs-on: ubuntu-latest
+    needs: [lint, pytest, install]
+    if: always()
+    defaults:
+      run:
+        working-directory: .
+    steps:
+      - name: Check all jobs passed
+        if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
+        run: exit 1
