fix: updated wordlists for content enum
* fixed gobuster and feroxbuster payloads
* based on https://github.com/danielmiessler/SecLists/pull/1232

--- a/src/profi/templates/scripts/feroxbuster-auth-cookie-full.yaml
+++ b/src/profi/templates/scripts/feroxbuster-auth-cookie-full.yaml
@@ -6,4 +6,4 @@ metadata:
   author: "Unknown"
 
 content: |
-  mkdir -p feroxbuster; feroxbuster -o feroxbuster/ferox_auth_full.log -w /usr/share/seclists/Discovery/Web-Content/directory-list-2.3-medium.txt --no-state --rate-limit <120|200> -u "http://<ip>:<port>" -x <zip,config,txt,pdf,html,js,bak> --cookies <sessionname>=<sessionId>
+  mkdir -p feroxbuster; feroxbuster -o feroxbuster/ferox_auth_full.log -w /usr/share/seclists/Discovery/Web-Content/combined_directories.txt --no-state --rate-limit <120|200> -u "http://<ip>:<port>" -x <zip,config,txt,pdf,html,js,bak> --cookies <sessionname>=<sessionId>
