--- a/src/profi/templates/scripts/feroxbuster-unauth-initial.yaml
+++ b/src/profi/templates/scripts/feroxbuster-unauth-initial.yaml
@@ -6,4 +6,4 @@ metadata:
   author: "Unknown"
 
 content: |
-  mkdir -p feroxbuster; feroxbuster -o feroxbuster/ferox_unauth_initial.log -w /usr/share/seclists/Discovery/Web-Content/directory-list-2.3-medium.txt --no-state -n --rate-limit <120|200> -u "http://<ip>:<port>"
+  mkdir -p feroxbuster; feroxbuster -o feroxbuster/ferox_unauth_initial.log -w /usr/share/seclists/Discovery/Web-Content/combined_directories.txt --no-state -n --rate-limit <120|200> -u "http://<ip>:<port>"
