--- a/src/profi/templates/scripts/gobuster-dir-auth-cookie.yaml
+++ b/src/profi/templates/scripts/gobuster-dir-auth-cookie.yaml
@@ -6,4 +6,4 @@ metadata:
   author: "Unknown"
 
 content: |
-  mkdir -p gobuster; gobuster dir -x zip,pdf,php,html,txt,config -o gobuster/gobuster_auth.txt -w /usr/share/seclists/Discovery/Web-Content/directory-list-2.3-medium.txt -u http://<ip>:<port> -c "<cookie_name>=<cookie_value>"
+  mkdir -p gobuster; gobuster dir -x zip,pdf,php,html,txt,config -o gobuster/gobuster_auth.txt -w /usr/share/seclists/Discovery/Web-Content/combined_directories.txt -u http://<ip>:<port> -c "<cookie_name>=<cookie_value>"
